Add WebSocket for status and logs, Add clear Temporary files, Remove unused files and imports, Remove debug logs files, Add show records On Top, Fix minor problems,