@@ -4,8 +4,11 @@ import com.db.dbworld.exceptions.DbWorldException;
 import com.db.dbworld.services.StreamService;
 import com.db.dbworld.utils.DbWorldConstants;
 import lombok.extern.log4j.Log4j2;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.core.io.InputStreamResource;
+import org.springframework.core.io.ResourceLoader;
 import org.springframework.http.*;
+import org.springframework.scheduling.annotation.Async;
 import org.springframework.stereotype.Service;
 
 import java.io.File;
@@ -15,28 +18,31 @@ import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.*;
+import java.util.concurrent.CompletableFuture;
 import java.util.stream.Collectors;
 
 @Service
 @Log4j2
 public class StreamServiceImpl implements StreamService {
 
-    private static final String VIDEO_HOME_PATH = "D:/Bhavya/Videos";
-//    private static final String FTP_HOME_PATH = "./sda1/Movies";
+    @Autowired
+    private ResourceLoader resourceLoader;
 
+    @Async
     @Override
-    public ResponseEntity<InputStreamResource> getStreamResource(Path path, String range) {
+    public CompletableFuture<ResponseEntity<InputStreamResource>> getStreamResource(Path path, String range) {
 
         final Long fileSize = getFileSize(path);
         long rangeStart = 0;
         long rangeEnd = Math.min(DbWorldConstants.CHUNK_SIZE, fileSize - 1);
 
         if (range == null) {
-            return ResponseEntity.status(HttpStatus.PARTIAL_CONTENT)
+            return CompletableFuture.completedFuture(ResponseEntity.status(HttpStatus.PARTIAL_CONTENT)
+                    .header(HttpHeaders.TRANSFER_ENCODING, "chunked")
                     .header(DbWorldConstants.CONTENT_TYPE_HEADER, MediaType.APPLICATION_OCTET_STREAM_VALUE)
                     .header(DbWorldConstants.CONTENT_LENGTH_HEADER, String.valueOf(rangeEnd))
                     .header(DbWorldConstants.CONTENT_RANGE_HEADER, DbWorldConstants.BYTES + " " + rangeStart + "-" + rangeEnd + "/" + fileSize)
-                    .body(readResource(path, rangeStart)); // Read the object and convert it as bytes
+                    .body(readResource(path, rangeStart))); // Read the object and convert it as bytes
         }
         String[] ranges = range.split("-");
         rangeStart = Long.parseLong(ranges[0].substring(6));
@@ -52,26 +58,20 @@ public class StreamServiceImpl implements StreamService {
         if (rangeEnd >= fileSize) {
             httpStatus = HttpStatus.OK;
         }
-        return ResponseEntity.status(httpStatus)
+        return CompletableFuture.completedFuture(ResponseEntity.status(httpStatus)
+//                .header("Cache-Control", "no-cache, no-store, must-revalidate")
+//                .header("Pragma", "no-cache")
+//                .header("Expires", "0")
+                .header(HttpHeaders.TRANSFER_ENCODING, "chunked")
                 .header(DbWorldConstants.CONTENT_TYPE_HEADER, MediaType.APPLICATION_OCTET_STREAM_VALUE)
                 .header(DbWorldConstants.CONTENT_LENGTH_HEADER, contentLength)
                 .header(DbWorldConstants.CONTENT_RANGE_HEADER, DbWorldConstants.BYTES + " " + rangeStart + "-" + rangeEnd + "/" + fileSize)
-                .body(readResource(path, rangeStart));
+                .body(readResource(path, rangeStart)));
     }
 
-//    @Override
-//    public ResponseEntity<InputStreamResource> getDownloadResource(Path path) {
-//        final Long fileSize = getFileSize(path);
-//        long rangeStart = 0;
-//        return ResponseEntity.status(HttpStatus.OK)
-//                .header(DbWorldConstants.CONTENT_TYPE_HEADER, MediaType.APPLICATION_OCTET_STREAM_VALUE)
-//                .header(DbWorldConstants.CONTENT_LENGTH_HEADER, String.valueOf(fileSize))
-//                .header(DbWorldConstants.CONTENT_DISPOSITION_HEADER, getContentDisposition(path))
-//                .body(readResource(path, rangeStart));
-//    }
-
     @Override
-    public ResponseEntity<InputStreamResource> getDownloadResource(Path path, String range) {
+    @Async
+    public CompletableFuture<ResponseEntity<InputStreamResource>> getDownloadResource(Path path, String range) {
         final Long fileSize = getFileSize(path);
         long rangeStart = 0;
         long rangeEnd = (fileSize - 1);
@@ -81,34 +81,47 @@ public class StreamServiceImpl implements StreamService {
             rangeStart = Long.parseLong(ranges[0].substring(6));
             httpStatusCode = HttpStatus.PARTIAL_CONTENT;
         }
-        return ResponseEntity.status(httpStatusCode)
+        return CompletableFuture.completedFuture(ResponseEntity.status(httpStatusCode)
+                .header(HttpHeaders.TRANSFER_ENCODING, "chunked")
                 .header(DbWorldConstants.ACCEPT_RANGES_HEADER, DbWorldConstants.BYTES)
-                .header("Cache-Control", "no-cache, no-store, must-revalidate")
-                .header("Pragma", "no-cache")
-                .header("Expires", "0")
-                .header("hash", String.valueOf(path.hashCode()))
                 .header(DbWorldConstants.CONTENT_TYPE_HEADER, MediaType.APPLICATION_OCTET_STREAM_VALUE)
                 .header(DbWorldConstants.CONTENT_LENGTH_HEADER, String.valueOf(fileSize - rangeStart))
                 .header(DbWorldConstants.CONTENT_DISPOSITION_HEADER, getContentDisposition(path))
                 .header(DbWorldConstants.CONTENT_RANGE_HEADER, DbWorldConstants.BYTES + " " + rangeStart + "-" + rangeEnd + "/" + fileSize)
-                .body(readResource(path, rangeStart));
+                .body(readResource(path, rangeStart)));
     }
 
     @Override
     public List<HashMap<String, Object>> getList(String path) {
-        String normalPath = VIDEO_HOME_PATH + path;
-//        String ftpPath = FTP_HOME_PATH + path;
+        Path normalPath = Path.of(DbWorldConstants.STREAM_HOME_PATH + File.separator + path);
+        Path externalDiskPath = Path.of(DbWorldConstants.EXTERNAL_STREAM_HOME_PATH + File.separator + path);
+        List<Path> list = new ArrayList<>();
         try {
-            return Files.list(Path.of(normalPath)).map(this::createDetails).collect(Collectors.toList());
+            if (path == null || path.equals("")) {
+                list.addAll(Files.list(normalPath).toList());
+                if(Files.exists(externalDiskPath))
+                    list.addAll(Files.list(externalDiskPath).toList());
+                else
+                    log.warn("External Disk Stream Path is ignored.");
+            } else {
+                if (Files.exists(normalPath)) {
+                    list.addAll(Files.list(normalPath).toList());
+                } else if (Files.exists(externalDiskPath)) {
+                    list.addAll(Files.list(externalDiskPath).toList());
+                }else{
+                    list.addAll(Files.list(Path.of(DbWorldConstants.STREAM_HOME_PATH)).toList());
+                }
+            }
+            return list.stream().map(this::createDetails).collect(Collectors.toList());
         } catch (IOException e) {
-            throw new DbWorldException(e.getMessage());
+            throw new DbWorldException(e.toString());
         }
     }
 
     @Override
     public ArrayList<File> getListRecursive(Path dir) {
         ArrayList<File> files = new ArrayList<>();
-        if (dir.toFile().isDirectory()) {
+        if (Files.exists(dir) && Files.isDirectory(dir)) {
             Arrays.stream(dir.toFile().listFiles()).forEach(file -> {
                 if (file.isDirectory()) {
                     files.addAll(getListRecursive(file.toPath()));
@@ -125,7 +138,9 @@ public class StreamServiceImpl implements StreamService {
         HashMap<String, Object> hashMap = new LinkedHashMap();
         try {
             hashMap.put("fileName", path.toFile().getName());
-            hashMap.put("filePath", path.toFile().getPath().replace("\\", "/").replace(VIDEO_HOME_PATH, ""));
+            hashMap.put("filePath", path.toFile().getPath().replace("\\", "/")
+                    .replace(DbWorldConstants.STREAM_HOME_PATH, "")
+                    .replace(DbWorldConstants.EXTERNAL_STREAM_HOME_PATH, ""));
             hashMap.put("isDirectory", path.toFile().isDirectory());
             hashMap.put("isFile", path.toFile().isFile());
             hashMap.put("fileSize", Files.size(path));
